- Ajusta `HistoryJsonToPdfTool`: remove cabeçalho "Source" e valida compatibilidade com PDFBox 2.x. - Padroniza imports do Jackson nas ferramentas auxiliares.