@@ -1,14 +1,14 @@
 package com.github.dayviddouglas.TradingBot.deriv;
 
 import com.github.dayviddouglas.TradingBot.model.Bar;
-import jakarta.json.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.node.ObjectNode;
 
-import java.io.StringReader;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicLong;
@@ -18,11 +18,12 @@ public class DerivMarketDataService {
     private static final Logger log = LoggerFactory.getLogger(DerivMarketDataService.class);
 
     private final DerivWsClient ws;
+    private final ObjectMapper mapper = new ObjectMapper();
     private final AtomicLong reqIdSeq = new AtomicLong(1000);
 
-    // ---- callbacks ----
-    private volatile TickHandler onTick;                 // (symbol, epochSeconds, quote)
-    private volatile Consumer<List<Bar>> onCandleHistory; // history response (one-shot)
+    // callbacks
+    private volatile TickHandler onTick;
+    private volatile Consumer<List<Bar>> onCandleHistory;
 
     @FunctionalInterface
     public interface TickHandler {
@@ -37,44 +38,38 @@ public class DerivMarketDataService {
     public void onTick(TickHandler handler) { this.onTick = handler; }
     public void onCandleHistory(Consumer<List<Bar>> handler) { this.onCandleHistory = handler; }
 
-    // ---- requests ----
+    // ---- requests (JSON) ----
 
     public long authorize(String token) {
         long reqId = reqIdSeq.getAndIncrement();
-        JsonObject payload = Json.createObjectBuilder()
-                .add("authorize", token)
-                .add("req_id", reqId)
-                .build();
+        ObjectNode payload = mapper.createObjectNode();
+        payload.put("authorize", token);
+        payload.put("req_id", reqId);
         ws.send(payload.toString());
         return reqId;
     }
 
     public long subscribeTicks(String symbol) {
         long reqId = reqIdSeq.getAndIncrement();
-        JsonObject payload = Json.createObjectBuilder()
-                .add("ticks", symbol)
-                .add("subscribe", 1)
-                .add("req_id", reqId)
-                .build();
+        ObjectNode payload = mapper.createObjectNode();
+        payload.put("ticks", symbol);
+        payload.put("subscribe", 1);
+        payload.put("req_id", reqId);
         ws.send(payload.toString());
         log.info("Subscribed ticks symbol={} req_id={}", symbol, reqId);
         return reqId;
     }
 
-    /**
-     * Best-effort seed (optional). Can fail sometimes with Deriv WrongResponse.
-     */
     public long fetchCandleHistory(String symbol, int granularitySeconds, int count) {
         long reqId = reqIdSeq.getAndIncrement();
-        JsonObject payload = Json.createObjectBuilder()
-                .add("ticks_history", symbol)
-                .add("adjust_start_time", 1)
-                .add("count", count)
-                .add("end", "latest")
-                .add("style", "candles")
-                .add("granularity", granularitySeconds)
-                .add("req_id", reqId)
-                .build();
+        ObjectNode payload = mapper.createObjectNode();
+        payload.put("ticks_history", symbol);
+        payload.put("adjust_start_time", 1);
+        payload.put("count", count);
+        payload.put("end", "latest");
+        payload.put("style", "candles");
+        payload.put("granularity", granularitySeconds);
+        payload.put("req_id", reqId);
         ws.send(payload.toString());
         log.info("Requested candle history symbol={} granularity={} count={} req_id={}",
                 symbol, granularitySeconds, count, reqId);
@@ -84,15 +79,15 @@ public class DerivMarketDataService {
     // ---- WS routing ----
 
     private void onWsMessage(String raw) {
-        try (JsonReader reader = Json.createReader(new StringReader(raw))) {
-            JsonObject msg = reader.readObject();
+        try {
+            JsonNode msg = mapper.readTree(raw);
 
-            if (msg.containsKey("error")) {
-                log.warn("Deriv error full msg: {}", msg);
+            if (msg.has("error")) {
+                log.warn("Deriv error full msg: {}", msg.toString());
                 return;
             }
 
-            String msgType = msg.getString("msg_type", "");
+            String msgType = msg.path("msg_type").asText("");
             switch (msgType) {
                 case "tick" -> handleTick(msg);
                 case "history" -> handleHistory(msg);
@@ -103,76 +98,50 @@ public class DerivMarketDataService {
         }
     }
 
-    private void handleTick(JsonObject msg) {
-        JsonObject tick = msg.getJsonObject("tick");
-        if (tick == null) return;
+    private void handleTick(JsonNode msg) {
+        JsonNode tick = msg.get("tick");
+        if (tick == null || !tick.isObject()) return;
 
-        String symbol = tick.getString("symbol", "");
-        Long epoch = getLong(tick, "epoch");
-        Double quote = getDouble(tick, "quote");
+        String symbol = tick.path("symbol").asText("");
+        long epoch = tick.path("epoch").asLong(-1);
+        double quote = tick.path("quote").asDouble(Double.NaN);
 
         TickHandler handler = onTick;
-        if (handler != null && !symbol.isBlank() && epoch != null && quote != null) {
+        if (handler != null && !symbol.isBlank() && epoch > 0 && Double.isFinite(quote)) {
             handler.onTick(symbol, epoch, quote);
         }
     }
 
-    private void handleHistory(JsonObject msg) {
-        JsonArray candles = msg.getJsonArray("candles");
-        if (candles == null) return;
+    private void handleHistory(JsonNode msg) {
+        JsonNode candles = msg.get("candles");
+        if (candles == null || !candles.isArray()) return;
 
         List<Bar> bars = new ArrayList<>(candles.size());
-        for (JsonValue v : candles) {
-            if (v.getValueType() != JsonValue.ValueType.OBJECT) continue;
-            Bar bar = toBar(v.asJsonObject());
+        for (JsonNode c : candles) {
+            Bar bar = toBar(c);
             if (bar != null) bars.add(bar);
         }
 
         bars.sort(Comparator.comparing(Bar::timestamp));
+
         Consumer<List<Bar>> handler = onCandleHistory;
-        if (handler != null) handler.accept(Collections.unmodifiableList(bars));
+        if (handler != null) handler.accept(List.copyOf(bars));
     }
 
-    private Bar toBar(JsonObject node) {
-        Long epoch = getLong(node, "epoch");
-        if (epoch == null || epoch <= 0) return null;
+    private Bar toBar(JsonNode node) {
+        long epoch = node.path("epoch").asLong(-1);
+        if (epoch <= 0) return null;
 
-        Double open = getDouble(node, "open");
-        Double high = getDouble(node, "high");
-        Double low = getDouble(node, "low");
-        Double close = getDouble(node, "close");
-        double volume = getDouble(node, "volume") != null ? getDouble(node, "volume") : 0.0;
+        double open = node.path("open").asDouble(Double.NaN);
+        double high = node.path("high").asDouble(Double.NaN);
+        double low = node.path("low").asDouble(Double.NaN);
+        double close = node.path("close").asDouble(Double.NaN);
+        double volume = node.path("volume").asDouble(0.0);
 
-        if (open == null || high == null || low == null || close == null) return null;
+        if (!Double.isFinite(open) || !Double.isFinite(high) || !Double.isFinite(low) || !Double.isFinite(close)) {
+            return null;
+        }
 
         return new Bar(Instant.ofEpochSecond(epoch), open, high, low, close, volume);
-    }
-
-    private static Double getDouble(JsonObject obj, String key) {
-        if (!obj.containsKey(key) || obj.isNull(key)) return null;
-        JsonValue v = obj.get(key);
-
-        return switch (v.getValueType()) {
-            case NUMBER -> ((JsonNumber) v).doubleValue();
-            case STRING -> {
-                try { yield Double.parseDouble(((JsonString) v).getString()); }
-                catch (Exception e) { yield null; }
-            }
-            default -> null;
-        };
-    }
-
-    private static Long getLong(JsonObject obj, String key) {
-        if (!obj.containsKey(key) || obj.isNull(key)) return null;
-        JsonValue v = obj.get(key);
-
-        return switch (v.getValueType()) {
-            case NUMBER -> ((JsonNumber) v).longValue();
-            case STRING -> {
-                try { yield Long.parseLong(((JsonString) v).getString()); }
-                catch (Exception e) { yield null; }
-            }
-            default -> null;
-        };
     }
 }
